--- a/src/Styles/Cart.css
+++ b/src/Styles/Cart.css
@@ -182,3 +182,28 @@ body.active-modal {
     right: 10px;
     padding: 5px 7px;
 }
+
+@media only screen and (max-width: 768px) {
+    .product-text p:first-child {
+        font-size: 2rem;
+    }
+  }
+
+  @media only screen and (max-width: 480px) {
+    .product-price{
+        font-size: 1rem;
+    }
+    .beer-card-abv{
+        font-size: 1rem;
+    }
+    .img-box img:first-child {
+        width: 50%;
+    }
+    .quantity-box span:nth-child(2){
+        font-size: 16px !important;
+    }
+    .quantity-box input:nth-child(odd){
+        width: 15px;
+        height: 15px;
+    }
+  } 
