--- a/src/Styles/ProductPage.css
+++ b/src/Styles/ProductPage.css
@@ -6,7 +6,7 @@
 .product-page-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 60vw;
+    width: 80%;
     justify-items: center;
 }
 .product-page-img{
@@ -34,24 +34,24 @@
     margin-right: 2rem;
     font-weight: 900;
 }
-.product-page-details h1:first-child{
+.details-header h1:first-child{
     font-size: 4rem;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.product-page-details p:nth-child(2){
+.details p:nth-child(2){
     color: white;
     font-size: 2rem;
     margin-top: 2rem;
     line-break: strict;
 
 }
-.product-page-details p:nth-child(3){
+.details p:nth-child(3){
     color: white;
     font-size: 2rem;
     margin-top: 2rem;
 }
-.product-page-details p:nth-child(4){
+.details p:nth-child(4){
     color: white;
     font-size: 2rem;
     margin-top: 2rem;
@@ -65,23 +65,88 @@
     margin-top: 2rem;
     border: 0.01rem solid white;
 }
-.product-page-details button:nth-child(7){
-    padding: 1rem 5rem;
+.product-page-btn-box button:first-child{
+    padding: 1rem 0;
     border: none;
     border-radius: 10px;
     background-color: #e6a10e;
     color: white;
     font-family: 'Open Sans', sans-serif;
-    /* text-transform: uppercase; */
     font-weight: 600;
     font-size: 1.4rem;
     letter-spacing: 0.08rem;
     cursor: pointer;
     margin-top: 2rem;
-    width: 40%;
+    width: 50%;
 }
-.product-page-details button:nth-child(7):hover{
+.product-page-btn-box button:first-child:hover{
     background-color:black;
     color: #e6a10e;
     transition: 0.5s;
 }
+.product-page-details div:first-child{
+    width: 80%;
+}
+
+@media only screen and (max-width: 1140px) {
+    .details p:nth-child(3){
+        font-size: 18px !important;
+    }
+    .details-header h1:first-child{
+        font-size: 28px;
+    }
+    .price-label{
+        font-size: 28px;
+    }
+    .food-pairing-list{
+        font-size: 16px ;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .product-page-container{
+        grid-template-columns: 1fr;
+        height: 100%;
+    }
+    .product-page-details{
+        width: 100%;
+        padding-top: 0;
+    }
+    .product-page-img{
+       margin-top: 2rem;
+    }
+    .product-page-img img:first-child{
+        width: 70px;
+    }
+    .product-page-details div:first-child {
+        width: 100%;
+    }
+    .hr {
+        margin-top: 1rem;
+    }
+    .details p:nth-child(4) {
+        margin-top: 1rem;
+    }
+    .product-page-btn-box button:first-child {
+        margin-top: 1rem;
+    }      
+  }
+
+  
+  @media only screen and (max-width: 480px) {
+    .details p:nth-child(3){
+        font-size: 16px !important;
+    }
+    .details-header h1:first-child{
+        font-size: 22px;
+    }
+    .price-label{
+        font-size: 22px;
+    }
+    .food-pairing-list{
+        font-size: 14px ;
+    }
+    .product-page-details{
+        align-self: center;
+    }
+  } 
